# mcint.github.io

./: CNAME  README.md  index.html  mkdocs.yml  on-tmux.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  tags.html
.github/workflows/: pelican.yml
author/: mcint.md
blog/: index.html
category/: thinking.html
content/: thinking-on-.tmux.md
docs/: 404.html  index.html  pelicanconf.py
docs-pelican/: publishconf.py
docs-pelican/output/feeds/: all.atom.xml
docs/blog/: index.html
docs/blog/methods/: index.html
docs/blog/topics/: index.html
docs/content/: thinking-on-.tmux.md
docs/me/howto/: index.html
docs/output/: archives.html  authors.html  categories.html  index.html  tags.html  thinking-on-tmux-configuration-composable-vs-redefined-configs.html
docs/output/author/: mcint.html
docs/output/category/: thinking-dotfiles-cli-tools-tmux-config.html
docs/search/: search_index.json
feeds/: thinking.atom.xml
output/: archives.html  categories.html  index.html  on-tmux.html  tags.html
output/author/: mcint.html
output/category/: thinking.html
output/feeds/: all.atom.xml
output/tag/: cli.html  config.html  dotfiles.html  thinking.html  tmux.html  tools.html
src/: index.md
src/blog/: index.md  methods.md  topics.md
src/me/: howto.md
tag/: cli.html  config.html  tmux.html
