[tool.poetry]
name = "mcint.github.io"
version = "0.1.0"
description = ""
authors = ["Loren McIntyre <loren@git.mcint.io>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
